--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <title>Odin Recipes</title>
         <body>
             <h1>Odin Recipes</h1>
-            <a href="./recipes/frenchtoast.html">French Toast Recipe</a>
+            <ul>
+            <li><a href="./recipes/frenchtoast.html">French Toast Recipe</a></li>
+            <li><a href="./recipes/lambsouvlaki.html">Lamb Souvlaki Recipe</a></li>
+            <li><a href="./recipes/chocolatechipcookies.html">Chocolate Chip Cookies Recipe</a></li>
+            </ul>
         </body>
     </head>
 </html>
