--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -1,2 +1,22 @@
 <h1>French Toast</h1>
-<img src="../images/frenchtoast.png">
+<img src="../images/frenchtoast.png" alt="Close up shot of french toast on a plate. Covered in strawberries, blueberries and maple syrup.">
+<body>Thick slices of sweet bread are the perfect base for French toast.</body>
+
+<h3>Ingredients</h3>
+<ul>
+    <li>4 (1 inch thick) slices of sweet bread</li>
+    <li>4 large eggs</li>
+    <li>1/2 cup milk</li>
+    <li>1/2 teaspoon of vanilla</li>
+    <li>1/4 teaspoon ground cinnamon</li>
+    <li>2 tablespoons butter or oil</li>
+    <li>2 tablespoons maple syrup</li>
+</ul>
+<h3>Directions:</h3>
+<ol>
+    <li>Slice bread crosswise so that each slice is about 1-inch thick. Cut larger slices into halves or thirds, if desired. Set aside</li>
+    <li>In a shallow mixing bowl, whisk together the eggs, milk, vanilla and cinnamon.</li>
+    <li>Quickly dip slices (do not soak) in egg mixture and cook until golden brown on both sides.</li>
+    <li>Keep egg mixture stirred and spices well blended.</li>
+    <li>Sprinkle with powdered sugar and serve with warm maple syrup.</li>
+</ol>
