--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./style.css">
         <title>Odin Recipes</title>
         <body>
             <h1>Odin Recipes</h1>
             <ul>
-            <li><a href="./recipes/frenchtoast.html">French Toast Recipe</a></li>
-            <li><a href="./recipes/lambsouvlaki.html">Lamb Souvlaki Recipe</a></li>
-            <li><a href="./recipes/chocolatechipcookies.html">Chocolate Chip Cookies Recipe</a></li>
+            <li class="link ft"><a href="./recipes/frenchtoast.html">French Toast Recipe</a></li>
+            <li class="link ls"><a href="./recipes/lambsouvlaki.html">Lamb Souvlaki Recipe</a></li>
+            <li class="link ccc"><a href="./recipes/chocolatechipcookies.html">Chocolate Chip Cookies Recipe</a></li>
             </ul>
         </body>
     </head>
